testsuite/tests/rep-poly/RepPolyPatSynArg.stderr

RepPolyPatSynArg.hs:17:1: error: [GHC-18478]
    The pattern synonym argument does not have a fixed runtime representation:
    • a :: TYPE rep
